k8s/spring-micro-app3/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: spring-service
  namespace: ameen2607-dev
spec:
  selector:
    app: spring-micro
  ports:
    - protocol: TCP
      port: 3001
      targetPort: 3001
  type: ClusterIP
