k8s/spring-micro-app3/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: spring-route
  namespace: ameen2607-dev
spec:
  to:
    kind: Service
    name: spring-service
  port:
    targetPort: 3001
  tls:
    termination: edge
